--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -2,6 +2,7 @@ anyio==2.0.2
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
+autopep8==1.5.4
 Babel==2.9.0
 backcall==0.2.0
 bleach==3.2.1
@@ -43,6 +44,7 @@ pickleshare==0.7.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
+pycodestyle==2.6.0
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
@@ -56,6 +58,7 @@ six==1.15.0
 sniffio==1.2.0
 terminado==0.9.1
 testpath==0.4.4
+toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.2
