--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -12,7 +12,9 @@ chardet==4.0.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+hypothesis==5.43.4
 idna==2.10
+iniconfig==1.1.1
 ipykernel==5.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
@@ -28,6 +30,8 @@ jupyterlab-pygments==0.1.2
 jupyterlab-server==2.0.0
 MarkupSafe==1.1.1
 mistune==0.8.4
+mypy==0.790
+mypy-extensions==0.4.3
 nbclassic==0.2.5
 nbclient==0.5.1
 nbconvert==6.0.7
@@ -41,14 +45,17 @@ pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
+py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.2.1
 python-dateutil==2.8.1
 pytz==2020.5
 pyzmq==20.0.0
@@ -56,11 +63,14 @@ requests==2.25.1
 Send2Trash==1.5.0
 six==1.15.0
 sniffio==1.2.0
+sortedcontainers==2.3.0
 terminado==0.9.1
 testpath==0.4.4
 toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
