--- a/census/Makefile
+++ b/census/Makefile
@@ -1,4 +1,13 @@
+ifndef TEST_PATTERN
+override TEST_PATTERN=''
+endif
+
+
 init:
 	python -m pip install -r requirements.txt
+
+test:
+	clear
+	pytest -vv -s -k $(TEST_PATTERN)
 
 .PHONY: init
