--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -1,14 +1,10 @@
-anyio==2.0.2
 appdirs==1.4.4
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
-autopep8==1.5.4
-Babel==2.9.0
 backcall==0.2.0
 black==20.8b1
 bleach==3.2.1
--e git+git@github.com:drawjk705/us-stats.git@bbeaf791fff95c13434fd7a9b8b04e94db1860d4#egg=census&subdirectory=census
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -16,27 +12,21 @@ click==7.1.2
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
-hypothesis==5.43.4
 idna==2.10
-iniconfig==1.1.1
 ipykernel==5.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.2
 jedi==0.18.0
 Jinja2==2.11.2
-json5==0.9.5
 jsonschema==3.2.0
 jupyter-client==6.1.7
 jupyter-core==4.7.0
-jupyter-server==1.1.3
-jupyterlab==3.0.0
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.0.0
+jupyterlab-widgets==1.0.0
 MarkupSafe==1.1.1
 mistune==0.8.4
-mypy==0.790
 mypy-extensions==0.4.3
-nbclassic==0.2.5
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
@@ -50,20 +40,14 @@ parso==0.8.1
 pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
-pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
-ptyprocess==0.6.0
-py==1.10.0
-pycodestyle==2.6.0
+ptyprocess==0.7.0
+punq==0.4.1
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
-pytest==6.2.1
-pytest-clarity==0.3.0a0
-pytest-mock==3.4.0
-pytest-sugar==0.9.4
 python-dateutil==2.8.1
 pytz==2020.5
 pyzmq==20.0.0
@@ -71,16 +55,15 @@ regex==2020.11.13
 requests==2.25.1
 Send2Trash==1.5.0
 six==1.15.0
-sniffio==1.2.0
-sortedcontainers==2.3.0
-termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 toml==0.10.2
 tornado==6.1
+tqdm==4.55.1
 traitlets==5.0.5
-typed-ast==1.4.1
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
+widgetsnbextension==3.5.1
