--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -9,10 +9,12 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+coverage==5.3.1
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 idna==2.10
+iniconfig==1.1.1
 ipykernel==5.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
@@ -40,14 +42,20 @@ parso==0.8.1
 pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 ptyprocess==0.7.0
 punq==0.4.1
+py==1.10.0
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.2.1
+pytest-cov==2.10.1
+pytest-mock==3.4.0
+pytest-sugar==0.9.4
 python-dateutil==2.8.1
 pytz==2020.5
 pyzmq==20.0.0
@@ -55,6 +63,7 @@ regex==2020.11.13
 requests==2.25.1
 Send2Trash==1.5.0
 six==1.15.0
+termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 toml==0.10.2
