--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -5,6 +5,7 @@ attrs==20.3.0
 backcall==0.2.0
 black==20.8b1
 bleach==3.2.1
+callee==0.3.1
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -13,6 +14,7 @@ coverage==5.3.1
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+hypothesis==5.43.9
 idna==2.10
 iniconfig==1.1.1
 ipykernel==5.4.2
@@ -23,9 +25,15 @@ jedi==0.18.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 jupyter-client==6.1.7
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
 jupyter-core==4.7.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+lxml==4.6.2
 MarkupSafe==1.1.1
 mistune==0.8.4
 mypy-extensions==0.4.3
@@ -54,15 +62,19 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 pytest==6.2.1
 pytest-cov==2.10.1
+pytest-cover==3.0.0
+pytest-coverage==0.0
 pytest-mock==3.4.0
 pytest-sugar==0.9.4
 python-dateutil==2.8.1
 pytz==2020.5
+PyYAML==5.3.1
 pyzmq==20.0.0
 regex==2020.11.13
 requests==2.25.1
 Send2Trash==1.5.0
 six==1.15.0
+sortedcontainers==2.3.0
 termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
