--- a/census/Makefile
+++ b/census/Makefile
@@ -2,13 +2,22 @@ ifndef TEST_PATTERN
 override TEST_PATTERN=''
 endif
 
+ifdef VERBOSE
+override VERBOSE_FLAG = -vv
+endif
+
+TEST_BASE = pytest $(VERBOSE_FLAG) -k $(TEST_PATTERN)
 
 init:
 	python -m pip install -r requirements.txt
 
 test:
 	clear
-	pytest -vv -k $(TEST_PATTERN)
+	$(TEST_BASE) -m "not integration"
+
+test-integration:
+	clear
+	$(TEST_BASE) -m integration
 
 test-coverage:
 	clear
