--- a/census/requirements.txt
+++ b/census/requirements.txt
@@ -14,7 +14,7 @@ coverage==5.3.1
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
-hypothesis==5.43.9
+hypothesis==5.46.0
 idna==2.10
 iniconfig==1.1.1
 ipykernel==5.4.2
@@ -61,17 +61,20 @@ Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
 pytest==6.2.1
+pytest-clarity==0.3.0a0
 pytest-cov==2.10.1
 pytest-cover==3.0.0
 pytest-coverage==0.0
 pytest-mock==3.4.0
 pytest-sugar==0.9.4
+pytest-tldr==0.2.2
 python-dateutil==2.8.1
 pytz==2020.5
 PyYAML==5.3.1
 pyzmq==20.0.0
 regex==2020.11.13
 requests==2.25.1
+requests-mock==1.8.0
 Send2Trash==1.5.0
 six==1.15.0
 sortedcontainers==2.3.0
