--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,15 @@ pytest-cov = "^2.10.1"
 pytest-tldr = "^0.2.2"
 flake8 = "^3.8.4"
 data-science-types = "^0.2.22"
+pytest-randomly = "^3.5.0"
+poethepoet = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poe.tasks]
+test = "pytest -m \"not integration\""
+test-integration = "pytest -m integration"
+test-coverage = "pytest --cov-report term-missing:skip-covered --cov=census tests/"
+clean = "rm rf ./**/__pycache__"
