--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/bin/python3.9",
+    "python.pythonPath": ".venv/bin/python",
     "sqltools.connections": [
         {
             "mssqlOptions": {
