--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,4 +41,5 @@ build-backend = "poetry.core.masonry.api"
 test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=census tests/"
+lint = "pyright"
 clean = "rm rf ./**/__pycache__"
