--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
 [pytest]
 testpaths =
-    tests/unit
-    tests/integration
+    tests/
 
 markers=
     integration: mark a test as an integration test
