--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ ipython = "^7.19.0"
 jupyterlab = "^3.0.1"
 ipywidgets = "^7.6.2"
 matplotlib = "^3.3.3"
+isort = "^5.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -44,7 +45,8 @@ test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=census --cov=congress tests/"
 lint = "pyright"
-run-black = "black ."
+black = "black ."
+sort-imports = "isort ."
 clean = "rm rf ./**/__pycache__"
 
 [[tool.poetry.source]]
