--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,4 +23,28 @@ jobs:
               id: full-python-version
               run: |
                   echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
-                  echo hello
+
+            - name: install poetry
+              run: |
+                  curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+                  python get-poetry.py -y
+                  echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+            - name: configure poetry
+              run: poetry config virtualenvs.in-project true
+            - name: set up cache
+              uses: actions/cache@v2
+              id: cache
+              with:
+                  path: .venv
+                  key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+            - name: ensure cache is healthy
+              if: steps.cache.outputs.cache-hit == 'true'
+              run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
+            - name: install dependencies
+              run: poetry install
+            - name: test
+              run: |
+                  poetry shell
+                  poe test-coverage
+            - name: upload coverage
+              uses: codecov/codecov-action@v2
