--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,23 +22,25 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install Poetry Action
-              uses: snok/install-poetry@v1.1.1
-              with:
-                  version: 1.1.4
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
+            # - name: Install Poetry Action
+            #   uses: snok/install-poetry@v1.1.1
+            #   with:
+            #       version: 1.1.4
+            #       virtualenvs-create: true
+            #       virtualenvs-in-project: true
 
-            - name: load cached venv
-              id: cached-poetry-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+            # - name: load cached venv
+            #   id: cached-poetry-dependencies
+            #   uses: actions/cache@v2
+            #   with:
+            #       path: .venv
+            #       key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: install dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+            # - name: install dependencies
+            #   run: poetry install
+            #   if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
             - name: lint
-              run: poetry run black . --check
+              run: |
+                  pip3 install black
+                  black . --check
