--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,8 @@ build-backend = "poetry.core.masonry.api"
 test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=us_data tests/"
-lint = "pyright"
-black = "black ."
+lint = "pyright ."
+format = "black ."
 sort-imports = "isort ."
 clean = "rm rf ./**/__pycache__"
 
