adding test suit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: lint
+name: unit-test
 on:
     push:
     pull_request:
@@ -22,11 +22,6 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: set up node
-              uses: actions/setup-node@v2
-              with:
-                  node-version: '12'
-
             - name: Install Poetry Action
               uses: snok/install-poetry@v1.1.1
               with:
@@ -45,19 +40,13 @@ jobs:
               run: poetry install
               if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-            - name: load cached npm
-              id: cached-npm-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: ~/.npm
-                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-            - name: install pyright dependencies
-              run: sudo npm install -g pyright
-              if: steps.cached-npm-dependencies.outputs.cache-hit != 'true'
-
-            - name: lint
+            - name: test
               run: |
-                  poetry run poe typing
-                  poetry run poe lint
-                  poetry run poe sort-imports
+                  poetry shell
+                  poe test-coverage
+                  coverage report
+
+            - name: upload coverage
+              uses: codecov/codecov-action@v1
+              fail_ci_if_error: true
+              verbose: true
