--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,8 @@ build-backend = "poetry.core.masonry.api"
 test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=us_data tests/"
-lint = "pyright ."
-format = "black ."
+typing = "pyright . --createstub us callee punq tqdm"
+lint = "black . --check"
 sort-imports = "isort ."
 clean = "rm rf ./**/__pycache__"
 
