--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
                   poe test-coverage
                   coverage report
 
-            - name: upload coverage
-              uses: codecov/codecov-action@v1
-              fail_ci_if_error: true
-              verbose: true
+            # - name: upload coverage
+            #   uses: codecov/codecov-action@v1
+            #   fail_ci_if_error: true
+            #   verbose: true
