--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
 
             - name: test
               run: |
-                  poetry shell
+                  source ./.venv/bin/activate
                   poe test-coverage
                   coverage report
 
