--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,10 @@ jobs:
             - name: test
               run: |
                   source ./.venv/bin/activate
-                  poe test-coverage
+                  poe test-coverage -vv
                   coverage report
 
-            # - name: upload coverage
-            #   uses: codecov/codecov-action@v1
-            #   fail_ci_if_error: true
-            #   verbose: true
+            - name: upload coverage
+              uses: codecov/codecov-action@v1
+              fail_ci_if_error: true
+              verbose: true
