--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,6 +59,6 @@ jobs:
             - name: lint
               run: |
                   source ./.venv/bin/activate
-                  poe typing
+                  sudo poe typing
                   poe lint
                   poe sort-imports
