--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: lint
+name: CI
 on:
     push:
     pull_request:
@@ -61,3 +61,43 @@ jobs:
                   poe typing
                   poe lint
                   poe sort-imports
+
+    test:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python-version: [3.8, 3.9]
+            fail-fast: false
+
+        steps:
+            - name: check out repo
+              uses: actions/checkout@v2
+
+            - name: set up python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: ${{ matrix.python-version }}
+
+            - name: Install Poetry Action
+              uses: snok/install-poetry@v1.1.1
+              with:
+                  version: 1.1.4
+                  virtualenvs-create: true
+                  virtualenvs-in-project: true
+
+            - name: load cached venv
+              id: cached-poetry-dependencies
+              uses: actions/cache@v2
+              with:
+                  path: .venv
+                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+            - name: install poetry dependencies
+              run: poetry install
+              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+            - name: test
+              run: |
+                  source ./.venv/bin/activate
+                  poe test-coverage -vv
+                  coverage report
