--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -58,12 +58,12 @@ jobs:
               run: |
                   poetry version
 
-                  poetry config repositories.testpypi https://test.pypi.org/legacy/
+                  poetry config repositories.testpypi https://test.pypi.org/simple/
                   echo set up testpypi repository
 
                   echo $PYPI_TEST_TOKEN
 
-                  poetry config pypi-token.pypi $PYPI_TEST_TOKEN
+                  poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
                   echo set up token for testpypi
 
                   poetry publish -r testpypi
