--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,4 +50,4 @@ clean = "rm rf ./**/__pycache__"
 [[tool.poetry.source]]
 name = "testpypi"
 url = "https://test.pypi.org/legacy/"
-secondary = true
+secondary = false
