--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -58,6 +58,6 @@ jobs:
 
                   poetry build
                   poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
-                  poetry publish
+                  poetry publish -r testpypi
               env:
                   PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
