--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -8,17 +8,14 @@ on:
 jobs:
     publish:
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                python-version: [3.9]
+        with:
+            python-version: 3.9
         steps:
             - name: check out repo
               uses: actions/checkout@v2
 
             - name: set up python
               uses: actions/setup-python@v2
-              with:
-                  python-version: ${{ matrix.python-version }}
 
             - name: Install Poetry Action
               uses: snok/install-poetry@v1.1.1
@@ -52,12 +49,23 @@ jobs:
               run: |
                   poetry version minor
 
-            - name: build and publish
-              run: |
-                  poetry version
+            # - name: build and publish
+            #   run: |
+            #       poetry version
 
-                  poetry build
-                  poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
-                  poetry publish -r testpypi
+            #       poetry build
+            #       poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
+            #       poetry publish -r testpypi
+            #   env:
+            #       PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
+
+            - name: Bump version and push tag
+              id: tag_version
+              uses: mathieudutour/github-tag-action@v5.1
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: echo it
+              run: echo $TAG
               env:
-                  PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
+                  TAG: { { steps.tag_version.outputs.new_tag } }
