patch: plz plz plz work

--- a/.github/workflows/bump-version-on-tag.yml
+++ b/.github/workflows/bump-version-on-tag.yml
@@ -1,9 +1,11 @@
 name: bump version on tag
 
 on:
-    create:
-        tags:
-            - 'v**'
+    push:
+      branches:
+        - main
+      tags:
+        - 'v*.*.*'
 
 jobs:
     bump-version:
