--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,23 @@ on:
             - '**'
 
 jobs:
+  commit:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check out repo
+        uses: actions/checkout@v2
+
+      - name: make a change
+        run: |
+          echo hello there > test.txt
+
+      - name: commit the changes
+        uses: EndBug/add-and-commit@v6
+        with:
+          message: this is a test
+          tag: 'test tag --force'
+
+
     # lint:
     #     runs-on: ubuntu-latest
     #     strategy:
@@ -102,90 +119,85 @@ jobs:
     #               poe test-coverage -vv
     #               coverage report
 
-    publish:
-        # needs: [lint, test]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Check out repo
-              uses: actions/checkout@v2
+    # publish:
+    #     # needs: [lint, test]
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: Check out repo
+    #           uses: actions/checkout@v2
 
-            - name: Set up python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: 3.9
+    #         - name: Set up python
+    #           uses: actions/setup-python@v2
+    #           with:
+    #               python-version: 3.9
 
-            - name: Install poetry
-              uses: snok/install-poetry@v1.1.1
-              with:
-                  version: 1.1.4
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
+    #         - name: Install poetry
+    #           uses: snok/install-poetry@v1.1.1
+    #           with:
+    #               version: 1.1.4
+    #               virtualenvs-create: true
+    #               virtualenvs-in-project: true
 
-            - name: Load cached venv
-              id: cached-poetry-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+    #         - name: Load cached venv
+    #           id: cached-poetry-dependencies
+    #           uses: actions/cache@v2
+    #           with:
+    #               path: .venv
+    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: Install poetry dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+    #         - name: Install poetry dependencies
+    #           run: poetry install
+    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-            # - name: Maybe bump major
-            #   if: startsWith(github.event.head_commit.message, 'breaking:')
-            #   run: |
-            #       poetry version major
+    #         # - name: Maybe bump major
+    #         #   if: startsWith(github.event.head_commit.message, 'breaking:')
+    #         #   run: |
+    #         #       poetry version major
 
-            # - name: Maybe bump patch
-            #   if: ${{ startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' )}}
-            #   run: |
-            #       poetry version patch
+    #         # - name: Maybe bump patch
+    #         #   if: ${{ startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' )}}
+    #         #   run: |
+    #         #       poetry version patch
 
-            - name: Maybe bump patch
-              # if: ${{ !(startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' ) && !(startsWith(github.event.head_commit.message, 'breaking:')))}}
-              run: |
-                  poetry version patch
-                  cat pyproject.toml
+    #         - name: Maybe bump patch
+    #           # if: ${{ !(startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' ) && !(startsWith(github.event.head_commit.message, 'breaking:')))}}
+    #           run: |
+    #               poetry version patch
+    #               cat pyproject.toml
 
-            - name: Get version number
-              run: |
-                  VERSION=$(poetry version)
-                  VERSION=${VERSION#"us-data "}
-                  echo "version=$VERSION" >> $GITHUB_ENV
+    #         - name: Get version number
+    #           run: |
+    #               VERSION=$(poetry version)
+    #               VERSION=${VERSION#"us-data "}
+    #               echo "version=$VERSION" >> $GITHUB_ENV
 
-            - name: checkout new branch
-              uses: actions/checkout@v2
-              with:
-                ref: refs/tags/v${{ env.version }}
+    #         - name: cat again
+    #           run: |
+    #             echo $REF
+    #             cat pyproject.toml
+    #           env:
+    #             REF: ${{ github.ref }}
 
-            - name: cat again
-              run: |
-                echo $REF
-                cat pyproject.toml
-              env:
-                REF: ${{ github.ref }}
+    #         # # - name: Build and publish
+    #         # #   run: |
+    #         # #       poetry build
+    #         # #       poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
+    #         # #       poetry publish -r testpypi
+    #         # #   env:
+    #         # #       PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
 
-            # # - name: Build and publish
-            # #   run: |
-            # #       poetry build
-            # #       poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
-            # #       poetry publish -r testpypi
-            # #   env:
-            # #       PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
+    #         # - name: Create release
+    #         #   id: create_release
+    #         #   uses: actions/create-release@latest
+    #         #   env:
+    #         #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #         #   with:
+    #         #       tag_name: v${{ env.version }}
+    #         #       release_name: v${{ env.version }}
+    #         #       draft: false
+    #         #       prerelease: false
 
-            # - name: Create release
-            #   id: create_release
-            #   uses: actions/create-release@latest
-            #   env:
-            #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            #   with:
-            #       tag_name: v${{ env.version }}
-            #       release_name: v${{ env.version }}
-            #       draft: false
-            #       prerelease: false
-
-            # - name: echo test
-            #   run: echo $REF
-            #   env:
-            #     REF: ${{ github.ref }}              
+    #         # - name: echo test
+    #         #   run: echo $REF
+    #         #   env:
+    #         #     REF: ${{ github.ref }}              
